<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Plan de Estudios y Modalidad"
                    android:textColor="#fff"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtNomDirec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="Nombre Director"

                android:inputType="textCapWords" />

            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/cmbDocuments1"
                android:entries="@array/cmbDocumentos">

            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/txtnumcrend1"

                android:hint="@string/numero_de_credencial" />

            <include layout="@layout/line" />

            <EditText
                android:id="@+id/txtNomT1"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="Testigo 1"

                android:inputType="textCapWords" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:id="@+id/cmbDocuments2"
                android:layout_marginRight="24dp"
                android:entries="@array/cmbDocumentos">

            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/txtnumcrend2"
                android:hint="Numero de credencia" />

            <include layout="@layout/line" />

            <EditText
                android:id="@+id/txtNomT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="Testigo 2"
                android:inputType="textCapWords" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/cmbDocuments3"
                android:entries="@array/cmbDocumentos">

            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/txtnumcrend3"
                android:hint="Numero de credencia" />


            <Button
                android:id="@+id/btncamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/tomas_fotos_de_documentos"
                android:textColor="#fff"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="#515050" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/programa"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="17dp" />


            <RadioGroup
                android:id="@+id/RG_Programa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RB_Trimestral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/trime" />

                <RadioButton
                    android:id="@+id/RB_Cuatrimestrak"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cuatri" />

                <RadioButton
                    android:id="@+id/RB_Semestral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/semestral" />

            </RadioGroup>

            <Spinner
                android:id="@+id/cmbNumPer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="#515050" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/modalidad"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="17dp" />

            <RadioGroup
                android:id="@+id/RG_Modalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbescola"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/escolarizada" />

                <RadioButton
                    android:id="@+id/rbnecolarizada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nescolarizada" />

                <RadioButton
                    android:id="@+id/rbmixta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mixta" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>


</LinearLayout>